--- a/gradle.properties
+++ b/gradle.properties
@@ -22,4 +22,4 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 android.enableJetifier=true
-API_KEY="d04fbb3ffd864635b981170fb49daa22"
+API_KEY="YOUR_KEY"
